--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div>
-        <div ng-include="'app/layout/main.html'"></div>
+        <div ng-include="'app/layout/master-template.html'"></div>
 <!--         <div id="splash-page" data-ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
