Fix incorrect reference to userRegister method.

--- a/app/user/register.html
+++ b/app/user/register.html
@@ -16,7 +16,7 @@
           </div>
 
           <div class="account-wall">
-            <form class="form-signin" role="form" ng-submit="userRegister(formData)">
+            <form class="form-signin" role="form" ng-submit="vm.userRegister(formData)">
               <fieldset>
                 <input class="form-control form-top" placeholder="Username" required="" autofocus="" type="text" ng-model="formData.username">
                 <input class="form-control form-middle" placeholder="Email address" required="" type="email" ng-model="formData.email">
