--- a/app/recipe/recipe.html
+++ b/app/recipe/recipe.html
@@ -2,7 +2,43 @@
 <div class="middle">
   <div class="container">
 
-  <p>This is the partial for the recipe display component.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-2">
+
+          <div class="message-pane message-pane-error alert-dismissable" ng-show="formErrors">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h5>There were errors loading the recipe</h5>
+            <ul>
+              <li ng-repeat="error in formErrors">{[{ error }]}</li>
+            </ul>
+          </div>
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ title }}</h3>
+            </div>
+
+            <div class="panel-body">
+              <form class="form-horizontal" role="form" ng-submit="vm.editUserProfile(userProfile)">
+                <fieldset>
+
+                  <!-- Field -->
+                  <div class="form-group">
+                    <label for="first_name" class="col-lg-4 control-label">First Name</label>
+                    <div class="col-lg-8">
+                      <input class="form-control" placeholder="First Name" name="first_name" type="text" ng-model="vm.userProfile.first_name">
+                    </div>
+                  </div>
+
+                </fieldset>
+              </form>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
 <!-- Closing main container -->
   </div><!-- /.container -->
