--- a/app/user/register.html
+++ b/app/user/register.html
@@ -7,11 +7,11 @@
         <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
           <h3 class="text-center login-title">Register and start brewing!</h3>
 
-          <div class="message-pane message-pane-error alert-dismissable" ng-show="formErrors">
+          <div class="message-pane message-pane-error alert-dismissable" ng-show="vm.formErrors">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h5>There were errors during registration:</h5>
             <ul>
-              <li ng-repeat="error in formErrors">{[{ error }]}</li>
+              <li ng-repeat="error in vm.formErrors">{[{ error }]}</li>
             </ul>
           </div>
 
