--- a/app/shared/auth/login.html
+++ b/app/shared/auth/login.html
@@ -7,16 +7,16 @@
         <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
         	<h3 class="text-center login-title">Welcome back! Please sign in</h3>
 
-          <div class="message-pane message-pane-error alert-dismissable" ng-show="formErrors">
+          <div class="message-pane message-pane-error alert-dismissable" ng-show="vm.formErrors.length > 0">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h5>There were errors during login:</h5>
             <ul>
-              <li ng-repeat="error in formErrors">{[{ error }]}</li>
+              <li ng-repeat="error in vm.formErrors">{[{ error }]}</li>
             </ul>
           </div>
 
           <div class="account-wall">
-            <form class="form-signin" role="form" ng-submit="userLogin(formData)">
+            <form class="form-signin" role="form" ng-submit="vm.userLogin(formData)">
               <fieldset>
                 <!-- <input class="form-control form-top" placeholder="Email address" required="" autofocus="" type="email" ng-model="formData.email"> -->
                 <input class="form-control form-top" placeholder="Username" required="" autofocus="" type="text" ng-model="formData.username">
